--- a/src/PhotoGallery/appsettings.json
+++ b/src/PhotoGallery/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PhotoGallery;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=HDC1-L-GLGSPQ2\\SQLEXPRESS;Database=PhotoGallery;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Data": {
     "PhotoGalleryConnection": {
